crates/tests/libs/bindgen/data/error/fn_out_with_args/input.rdl

#[win32]
mod Test {
    #[library("lib")]
    extern fn F(#[out(42)] output: i32);
}
        